--- a/themes/free2mind/layout/message.ejs
+++ b/themes/free2mind/layout/message.ejs
@@ -33,7 +33,7 @@
 
 	<!--多说js加载开始，一个页面只需要加载一次 -->
 	<script type="text/javascript">
-	var duoshuoQuery = {short_name:"rudy-yuan"};
+	var duoshuoQuery = {short_name:"beijingjs"};
 	(function() {
     	var ds = document.createElement('script');
 	    ds.type = 'text/javascript';ds.async = true;
