--- a/themes/free2mind/layout/_widget/broadcast.ejs
+++ b/themes/free2mind/layout/_widget/broadcast.ejs
@@ -10,9 +10,9 @@
 	<div id="myscroll" class="cls_container">
 		<ul>
 		  <li><span style="color:red"><i class="fa fa-warning"></i>欢迎访问本站!</span></li></br>
-		  <li><span style="color:red"><i class="fa fa-warning"></i>本站内容已经全部进行迁移</span></li></br>
+		  <li><span style="color:red"><i class="fa fa-warning"></i>北京官网正式上线了</span></li></br>
 		  <li><span style="color:red"><i class="fa fa-warning"></i>谷歌浏览器访问本站效果最佳!</span></li></br>
-		  <li><span style="color:red"><i class="fa fa-warning"></i>若URL失效，请使用本站内部搜索</span></li></br>
+		  <li><span style="color:red"><i class="fa fa-warning"></i>欢迎大家经常来光顾！</span></li></br>
 		</ul>
 	</div>
 
