--- a/themes/free2mind/layout/_partial/article.ejs
+++ b/themes/free2mind/layout/_partial/article.ejs
@@ -66,7 +66,7 @@
 						<a href="<%- config.root %><%- item.path %>" ><%= item.title %></a>
 					</h3>
 
-					<span style="font-size:15px"><%- item.content %></span>
+					<div class="entry-content"><%- item.content %></div>
 				</header>
 
 				<!-- share -->
