--- a/themes/free2mind/source/css/style.css
+++ b/themes/free2mind/source/css/style.css
@@ -39,9 +39,7 @@ body {
   -webkit-border-radius: 6px 6px 6px 6px;
   -moz-border-radius: 6px 6px 6px 6px;
   border-radius: 6px 6px 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.25);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.25);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.25);
+  border:1px solid #eee;
 }
 
 #sidebar {
@@ -84,8 +82,25 @@ body {
   margin-bottom: 20px;
   background-color: #fff;
   border-bottom: 1px solid #eee;
+  font-size:16px;
 }
-
+.entry-title{
+  margin-bottom:30px;
+}
+.entry-content{
+  font-size:16px;
+  line-height:28px;
+}
+.entry-content p strong{
+}
+.entry-content p{
+  line-height:28px;
+  margin-bottom:25px;
+}
+.entry-content h2{
+  margin-top:20px;
+  margin-bottom:20px;
+}
 
 .entry-info { 
   margin-bottom: 10px;
@@ -218,7 +233,11 @@ li i {
 }
 
 .listing-item {
-  line-height: 24px;
+  line-height: 55px;
+  font-size:22px;
+}
+.listing-item .title{
+  margin-left:10px;
 }
 
 /* =============================================================================
@@ -286,7 +305,7 @@ a.search-result-title {
 }
 
 p.search-result {
-  color=#555;
+  color:#555;
 }
 
 em.search-keyword {
@@ -403,6 +422,9 @@ video {
   background-image: none;
   border-radius: 4px;
 }
+.slogan h4{
+  font-size:24px;
+}
 
 /* =============================================================================
    scroll to top
@@ -460,12 +482,13 @@ h6, .h6 {
    ========================================================================== */
 
 .page .entry{
-  padding-top: 10px 0;
+  padding: 10px 0;
 }
 
 .page .entry .row{
   padding-left: 20px;
   padding-right: 10px;
+  line-height:30px;
 }
 
 .page .entry h2{
@@ -497,7 +520,7 @@ h6, .h6 {
 /* Entry meta */
 
 .entry-info { 
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   padding-bottom: 10px;
   font-size: 0.8em;
   line-height: 1.3;
@@ -542,7 +565,6 @@ margin-bottom: 9px;
 .curent{
 	width:30px;
 	height:30px;
-	footerfooter
 }
 
 .entry-date,
