--- a/themes/free2mind/layout/_widget/broadcast.ejs
+++ b/themes/free2mind/layout/_widget/broadcast.ejs
@@ -12,7 +12,7 @@
 		  <li><span style="color:red"><i class="fa fa-warning"></i>欢迎访问本站!</span></li></br>
 		  <li><span style="color:red"><i class="fa fa-warning"></i>北京官网正式上线了</span></li></br>
 		  <li><span style="color:red"><i class="fa fa-warning"></i>谷歌浏览器访问本站效果最佳!</span></li></br>
-		  <li><span style="color:red"><i class="fa fa-warning"></i>欢迎大家经常来光顾！</span></li></br>
+		  <li><span style="color:red"><i class="fa fa-warning"></i>欢迎向群管理员投稿！</span></li></br>
 		</ul>
 	</div>
 
