--- a/themes/free2mind/layout/_partial/post/comment.ejs
+++ b/themes/free2mind/layout/_partial/post/comment.ejs
@@ -1,7 +1,22 @@
 <% if (page.comment){ %>
 <section id="comment">
-  <% if(theme.duoshuo_shortname) { %>
-  	 <div class="ds-thread" data-thread-key="<%- page.path %>" data-title="<%- page.title %>" data-url="<%- page.permalink %>"></div>  
+  <% if(theme.gitcomment) { %>
+  	 <!--<div class="ds-thread" data-thread-key="<%- page.path %>" data-title="<%- page.title %>" data-url="<%- page.permalink %>"></div>  -->
+      <div id="container"></div>
+      <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+      <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+      <script>
+      var gitment = new Gitment({
+        id: 'location.href', // 可选。默认为 location.href
+        owner: 'eyea',
+        repo: 'beijingjs-comments',
+        oauth: {
+          client_id: 'b3ee7881b2c2b1250d75',
+          client_secret: 'ae6d77b6b82903afe85fa25aacd24c081a4bd782',
+        },
+      })
+      gitment.render('container')
+      </script>     
   <% } else if(config.disqus_shortname) { %>
   	 <div id="disqus_thread">
      <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
