--- a/themes/free2mind/layout/_partial/post/comment.ejs
+++ b/themes/free2mind/layout/_partial/post/comment.ejs
@@ -3,7 +3,7 @@
   <% if(theme.gitcomment) { %>
   	 <!--<div class="ds-thread" data-thread-key="<%- page.path %>" data-title="<%- page.title %>" data-url="<%- page.permalink %>"></div>  -->
       <div id="container"></div>
-      <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+      <link rel="stylesheet" href="https://github.com/eyeA/beijingjs-comments/default.css">
       <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
       <script>
       var gitment = new Gitment({
