--- a/themes/free2mind/layout/_partial/post/comment.ejs
+++ b/themes/free2mind/layout/_partial/post/comment.ejs
@@ -2,8 +2,8 @@
 <section id="comment">
   <% if(theme.gitcomment) { %>
   	 <!--<div class="ds-thread" data-thread-key="<%- page.path %>" data-title="<%- page.title %>" data-url="<%- page.permalink %>"></div>  -->
-      <div id="container"></div>
-      <link rel="stylesheet" href="https://raw.githubusercontent.com/eyeA/beijingjs-comments/master/default.css">
+      <div id="container" style="margin-top: 81px"></div>
+      <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
       <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
       <script>
       var gitment = new Gitment({
